<resources>
    <string name="app_name">FirstApp</string>
    <string name="firstName">Prenom</string>
    <string name="lastName">Nom</string>
    <string name="email">Email</string>
    <string name="password1">**********</string>
    <string name="inscriptionButton">Inscription</string>
    <string name="passwordIndicator">Indicateur</string>
    <string name="setting">Paramettre</string>
    <string name="connexionButton">Connexion</string>
    <string name="signInButton">Connexion</string>
    <string name="signUpButton">Inscription</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstConnectingText">Bonjour</string>
    <string name="firstConnectingButton">Commencer</string>
    <string name="signIn">Connexion</string>
    <string name="fileIndicator">photo.jpg</string>
    <string name="signOut">Deconnexion</string>
    <string name="goToChat">Chat</string>
    <string name="bg_color">Background</string>
    <string name="bg_key">backgroud</string>
    <string name="default_bg_color">Blue</string>
    <string name="mode_private">Mode privée</string>
    <string name="private_key">mode_privee</string>
    <string name="pref_private_mode_key">mode_privee</string>
    <string name="chatMessage">Taper votre message</string>
    <string name="envoyerMessage">Envoyer</string>
    <string name="distance">à 5 km</string>
    <string name="main_notification_channel_name">remind_notification_channel</string>
    <string name="charging_reminder_notification_channel_title">Device Charging - Where\\\'s that water?</string>
    <string name="charging_reminder_notification_body">There\\\'s never a better time to drink water than when you know your phone is charging. Drink up!</string>
    <string name="runNotification">Notification</string>
</resources>
