<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2C781"
    tools:context=".ui.mainActivity.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/firstName"
            android:text="@string/firstName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/shap_edit_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="115dp"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/lastName"
            android:text="@string/lastName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/shap_edit_text"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="190dp"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/email"
            android:text="@string/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:background="@drawable/shap_edit_text"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="265dp"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/password1"
            android:inputType="textPassword"
            android:hint="@string/password1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/shap_edit_text"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="340dp"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/password2"
            android:inputType="textPassword"
            android:hint="@string/password1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/shap_edit_text"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3E0CE8"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif"
            android:text="@string/signUpButton"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
