<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2C781"
    tools:context="ui.signInActivity.SignInActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/email"
            android:text="@string/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:background="@drawable/shap_edit_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="225dp"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/password1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/shap_edit_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E89F0C"
            android:fontFamily="sans-serif"
            android:textColor="#ffffff"
            android:text="@string/signInButton"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
